fix de logica en controladores de coordinador + fix en coordinador service, se cambio el front a react y se hizo un fix en propuestas